# xapp

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_android_armeabi_v7a.sh  build_ios.sh  build_osx.sh  build_posix.sh  rebuild_android.sh  rebuild_android_armeabi_v7a.sh  rebuild_ios.sh  rebuild_osx.sh  rebuild_posix.sh
cmakes/: cotire.cmake
projects/android_project/src/com/example/hello/: MainActivity.java
projects/hello_android/: AndroidManifest.xml  build.xml  local.properties
projects/hello_android/src/com/example/hello/: MainActivity.java
projects/hello_android/src/com/example/x/framework/: XAndroidSystem.java  XBaseConfig.java
projects/hello_android/src/x/framework/: XAndroidSystem.java  XBaseConfig.java  XDefaultLogger.java  XLoggerManager.java  XSystem.java
projects/hello_ios/hello/: ViewController.h  ViewController.mm
projects/hello_ios/hello.xcodeproj/: project.pbxproj
projects/hello_ios/hello/Base.lproj/: LaunchScreen.xib
projects/hello_osx/hello/: AppDelegate.h  Info.plist  ViewController.mm
projects/hello_osx/hello.xcodeproj/: project.pbxproj
projects/hello_osx/hello/Base.lproj/: Main.storyboard
projects/hello_osx/helloTests/: helloTests.m
projects/hello_posix/: CMakeLists.txt  Main.cpp  StdAfx.h  main.cpp
projects/ios_project/hello/: AppDelegate.h  AppDelegate.m  main.m
projects/ios_project/hello.xcodeproj/: project.pbxproj
projects/ios_project/hello/Base.lproj/: Main.storyboard
projects/ios_project/helloTests/: helloTests.m
projects/load_text_posix/: CMakeLists.txt  Main.cpp
projects/lua_data/: main.lua
projects/lua_osx/lua/: AppDelegate.m  ViewController.h  ViewController.mm
projects/lua_osx/lua.xcodeproj/: project.pbxproj
projects/lua_posix/: CMakeLists.txt  Main.cpp  StdAfx.h
projects/opengles_ios/opengles/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  main.m
projects/opengles_ios/opengles.xcodeproj/: project.pbxproj
projects/opengles_ios/opengles/Base.lproj/: LaunchScreen.xib
projects/opengles_ios/opengles/Shaders/: Shader.fsh  Shader.vsh
projects/opengles_ios/openglesTests/: openglesTests.m
projects/osx_project/hello/: ViewController.mm  main.m
projects/osx_project/hello.xcodeproj/: project.pbxproj
projects/posix_project/: CMakeLists.txt
sources/x_foundation/: CMakeLists.txt  ILogger.h  StdAfx.h  XAndroidLogger.cpp  XAndroidLogger.h  XAndroidMacros.h  XAndroidSystem.cpp  XAndroidSystem.h  XBaseConfig.cpp  XBaseConfig.h  XBinary.cpp  XBinary.h  XBuffer.h  XBufferStream.h  XDebug.h  XDebugMacros.h  XDefaultLogger.h  XDefineMacros.h  XFileBinary.h  XFileManager.cpp  XFileManager.h  XFileStream.h  XHeapBinary.h  XInformation.cpp  XInformation.h  XLogMacros.h  XLogType.h  XLogger.cpp  XLogger.h  XLoggerManager.cpp  XLoggerManager.h  XNSLogger.h  XNSLogger.mm  XOSDefine.h  XPath.cpp  XPath.h  XPlatform.h  XPool.h  XPosixLogger.cpp  XPosixLogger.h  (+12 more)
sources/x_foundation/android/: XAssetBinary.cpp  XAssetBinary.h  XDefaultLogger.cpp  XFileManager.cpp  XFileManager.h  XLogger.cpp  XLogger.h  XPlatform.cpp  XSystem.cpp  XSystem.h
sources/x_foundation/ns/: NSString+XString.h  NSString+XString.mm  XDefaultLogger.mm  XFileManager.h  XFileManager.mm  XLogger.h  XLogger.mm  XPlatform.mm  XString.h  XString.mm  XSystem.h  XSystem.mm
sources/x_foundation/posix/: XDefaultLogger.cpp  XFileManager.cpp  XFileManager.h  XLogger.cpp  XLogger.h  XPlatform.cpp  XSystem.cpp  XSystem.h
sources/x_interface/: CMakeLists.txt  JNIXAndroidSystem.cpp  JNIXInformation.cpp  StdAfx.h  XJNIMacros.h  XJNISystem.cpp  XLua.cpp  XLua.h
sources/x_interface/android/: XJNIBaseConfig.cpp  XJNIDefaultLogger.cpp  XJNILoggerManager.cpp  XJNIMacros.h  XJNISystem.cpp
toolchains/: ios.cmake
